--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -412,9 +412,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current provisioning state of AmlCompute is \"Deleting\"\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Get the AmlCompute cluster by name\n",
     "compute_cluster = AmlCompute(ws, \"udacity-project1\")\n",
